<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="pref_language">
    <SwitchPreference
        android:defaultValue="true"
        android:key="example_switch"
        android:summary="@string/En"
        android:title="@string/pref_lan_en" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="example_switch"
        android:summary="@string/Es"
        android:title="@string/pref_lan_es" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="example_switch"
        android:summary="@string/fr"
        android:title="@string/pref_lan_fr" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="example_switch"
        android:summary="@string/zh"
        android:title="@string/pref_lan_zh" />

</PreferenceScreen>