<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="need2feed.george.meliobyte.com.need2feed.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="need2feed.george.meliobyte.com.need2feed.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="need2feed.george.meliobyte.com.need2feed.SettingsActivity$LanguagePreferenceFragment"
        android:icon="@drawable/languageicon_24dp"
        android:title="@string/Language" />

    <header
        android:fragment="need2feed.george.meliobyte.com.need2feed.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_data_sync" />

</preference-headers>
