<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    android:background="@drawable/mainmenu2"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Name"/>

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"/>

<!-- -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Email"/>

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Password"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ConfirmPassword"/>

    <EditText
        android:id="@+id/ConfirmPass"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"/>
    <Button
        android:id="@+id/bRegister"
        android:text="@string/Register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#0f0e0e"
        android:clickable="true"
        android:background="@color/need2feedbuttonmain"
        android:nestedScrollingEnabled="false" />

</LinearLayout>

<!--
  <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Age"/>


    <NumberPicker
        android:layout_width="279dp"
        android:layout_height="20dp"
        android:id="@+id/numberPicker"
        android:layout_weight="0.14" />


-->