<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/mainmenu2"
    tools:context=".StartUp.MainActivity"
    android:clickable="true">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/tableLayout"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="192dp">


        <Button
            android:id="@+id/login_with_password"
            android:text="@string/login_with_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/need2feedbuttonmain"
            android:layout_margin="10dp"
            android:clickable="true"
          />
    </TableLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:hint="@string/Email"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/Password"
        android:hint="@string/Password"
        android:layout_below="@+id/email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RememberMe"
        android:id="@+id/checkBox"
        android:layout_below="@+id/Password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:checked="false" />


    <!--   <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:hint="Email"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Password"
                android:hint="Password"/><com.twitter.sdk.android.core.identity.TwitterLoginButton
                android:id="@+id/login_with_twitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"/>
            <Button
                android:id="@+id/login_with_twitter"
                android:text="@string/login_with_twitter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"/>



    -->


</RelativeLayout>

